@@ -1,3 +1,9 @@
+** v3.31, 30.07.2018**
+* Fix the WorldMap Title Frame.
+* Updated the Talent skin.
+* Added back my time datatext.
+* Fix the LFGListInviteDialog Role Icons.
+
 ** v3.30, 29.07.2018**
 * Added a panel to the chat to place the Voice Buttons.
 * -> You have to do the setup for Chat & ActionBars again.
