@@ -1,3 +1,9 @@
+[b][color=orange]v3.31[/color], 30.07.2018[/b][list]
+[*]Fix the WorldMap Title Frame.
+[*]Updated the Talent skin.
+[*]Added back my time datatext.
+[*]Fix the LFGListInviteDialog Role Icons.[/list]
+
 [b][color=orange]v3.30[/color], 29.07.2018[/b][list]
 [*]Added a panel to the chat to place the Voice Buttons.
 [*]-> You have to do the setup for Chat & ActionBars again.
